--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /publications/
 
   - title: "SHort CV"
-    url: /CV/    
+    url: /cv/    
 
   # - title: "Talks"
   #   url: /talks/    
