--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #   url: /year-archive/
     
   - title: "Full CV"
-    url: /cv/ # Full CV URL To be Changed
+    url: https://drive.google.com/file/d/1sbq_RbmfT4bd0pS0qYVw1n7qloM2Sdvt/view?usp=drive_link # Full CV URL To be Changed
     
   # - title: "Guide"
   #   url: /markdown/
