--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sangbeom Lim"
   avatar           : "profile.png"
-  bio              : "M.S/Ph.D Intergraded Student in Korea University, CVLab"
+  bio              : "M.S/Ph.D Integrated Student in Korea University @ CVLab"
   location         : "Seoul, Korea"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
