--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sangbeom Lim"
 title_separator          : "-"
 name                     : &name "Sangbeom Lim"
-description              : &description "M.S/Ph.D Intergraded Student in Korea University @ CVLab"
+description              : &description "M.S/Ph.D Integrated Student in Korea University @ CVLab"
 url                      : https://sangbeomlim.github.io # the base hostname & protocol for your site e.g. "https://sangbeomlim.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "SangbeomLim/sangbeomlim.github.io"
