--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sangbeom Lim"
-  avatar           : "sangbeom_profile.png"
+  avatar           : "sangbeom_profile.jpg"
   bio              : "M.S/Ph.D Integrated Student in Korea University @ CVLab"
   location         : "Seoul, Korea"
   employer         :
